<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.addstory.AddStoryActivity">

    <ImageView
        android:id="@+id/iv_thumbnail"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:contentDescription="@string/result_upload"
        android:padding="32dp"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_thumbnail_image"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_camera"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:text="@string/camera"
        app:layout_constraintEnd_toStartOf="@+id/btn_gallery"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_thumbnail" />

    <Button
        android:id="@+id/btn_gallery"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/gallery"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btn_camera"
        app:layout_constraintTop_toBottomOf="@id/iv_thumbnail" />

    <EditText
        android:id="@+id/ed_add_description"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_marginHorizontal="48dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/custom_edit_text"
        android:gravity="start"
        android:padding="8dp"
        android:maxLines="2"
        android:hint="@string/description"
        android:importantForAutofill="no"
        android:inputType="textMultiLine"
        android:textColorHint="#78909C"
        app:layout_constraintTop_toBottomOf="@id/btn_camera" />

    <Button
        android:id="@+id/btn_upload"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/upload"
        app:layout_constraintEnd_toEndOf="@id/ed_add_description"
        app:layout_constraintStart_toStartOf="@id/ed_add_description"
        app:layout_constraintTop_toBottomOf="@id/ed_add_description" />

    <ProgressBar
        android:id="@+id/pb_loading_screen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminateTint="#ADA4A5"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@id/btn_upload"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/btn_upload" />

</androidx.constraintlayout.widget.ConstraintLayout>